--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,4 +1,7 @@
 @import 'settings';
 @import 'foundation-emails';
 
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap');
+
+
 @import 'template/template';
