--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,14 +1,14 @@
 <wrapper class="footer">
 	<container>
-		<img align="center" alt="#cookwithfire" src="{{ root }}/assets/img/cookwithfire.gif" />
+		<img align="center" alt="#cookwithfire" href="https://www.instagram.com/cava/?utm_source=CAVA+Communications&utm_campaign=17ff18f480-EMAIL_2019_Summer_CWF_Protein_EC_080619&utm_medium=email&utm_term=0_0781726cfb-17ff18f480-195867929" src="https://i.imgur.com/FiKKhcQ.gifv" />
 		<row class="social-icons">
 			<center>
 				<spacer size="9"></spacer>
 	      <menu class="social-media">
-	        <item href="" target="_blank"><img src="{{ root }}/assets/img/fa-twitter.png" height="24" width="24"></item>
-	        <item href="" target="_blank"><img src="{{ root }}/assets/img/fa-instagram.png" height="24" width="24"></item>
-	        <item href="" target="_blank"><img src="{{ root }}/assets/img/fa-facebook.png" height="24" width="24"></item>
-	        <item href="" target="_blank"><img src="{{ root }}/assets/img/fa-youtube.png" height="24" width="24"></item>
+	        <item href="https://shorturl.at/jnuvY" target="_blank"><img src="https://i.imgur.com/ckfm479.png" height="24" width="24"></item>
+	        <item href="https://shorturl.at/aklpJ" target="_blank"><img src="https://i.imgur.com/IB55zS6.png" height="24" width="24"></item>
+	        <item href="https://shorturl.at/qBT19" target="_blank"><img src="https://i.imgur.com/0cwv4Ec.png" height="24" width="24"></item>
+	        <item href="https://shorturl.at/bsDGH" target="_blank"><img src="https://i.imgur.com/XBVevJH.png" height="24" width="24"></item>
 	      </menu>
      </center>
 		</row>
@@ -28,7 +28,7 @@
 					<span class="street-number">702 H Street NW </br>
 				  Second Floor </br>
 					Washington, DC 20001 </br></span>
-					<a href="#">Unsubscribe</a>
+					<a href="https://cava.us3.list-manage.com/unsubscribe/post">Unsubscribe</a>
 				</p>
 		</row>
 	</container>
