--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,6 @@
 <wrapper class="footer">
 	<container>
-		<img align="center" alt="#cookwithfire" href="https://www.instagram.com/cava/?utm_source=CAVA+Communications&utm_campaign=17ff18f480-EMAIL_2019_Summer_CWF_Protein_EC_080619&utm_medium=email&utm_term=0_0781726cfb-17ff18f480-195867929" src="https://i.imgur.com/FiKKhcQ.gifv" />
+		<img align="center" alt="#cookwithfire" href="https://www.instagram.com/cava/?utm_source=CAVA+Communications&utm_campaign=17ff18f480-EMAIL_2019_Summer_CWF_Protein_EC_080619&utm_medium=email&utm_term=0_0781726cfb-17ff18f480-195867929" src="https://i.imgur.com/FiKKhcQ.gif" />
 		<row class="social-icons">
 			<center>
 				<spacer size="9"></spacer>
